feat: expose required pension capital
